--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["coding-practice-5a/app.js"],"fileToBeOpened":"coding-practice-5a/app.http"}
+{"ignoredFilesOrFolders":[],"openFiles":["coding-practice-5a/app.http"],"fileToBeOpened":"coding-practice-5a/app.js"}
